Fixed facebook z-index

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -95,4 +95,5 @@ a:hover {
 	position: absolute !important;
 	top: 8px;
 	right: 4px;
+	z-index: 1000 !important;
 }
